# wasmzip

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.svelte  app.css  lib.rs
