[package]
name = "wasm-flate"
description = "A WASM library for compressing and decompressing data."
version = "0.1.0"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
flate2 = "1.0.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
